--- a/style.css
+++ b/style.css
@@ -1,5 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+body{
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  margin: 100px;
+}
+html{
+  background-color: lightblue;
+}
+.container{
+  background-color: white;
+  padding: 50px;
+  display: flex;
+  border-radius: 5px;
+  box-shadow: 5px 1px 10px 1px rgb(117, 117, 117);
+  min-width: 100px;
+  /* align-items: center;
+  justify-content: center; */
+  /* justify-content: space-between; */
+  gap: 10px;
+}
+.right-container{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.left-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+button{
+  display: block;
+  flex-direction: column;
+}
+i{
+  color: purple;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+.bold{
+  /* margin-top: 10px; */
+  font-size: 20px;
+  font-weight: bold;
+}
+.description{
+  color: gray;
+}
+.block{
+  margin-bottom: 30px;
+}
+.bold-purple{
+  color: purple;
+  font-size: 30px;
+  margin-bottom: -10px;
+}
+input{
+  padding: 10px;
+  border: none;
+  background-color: rgb(225, 225, 244);
+  border-radius: 5px;
+}
+.message{
+  vertical-align: top;
+  height: 80px;
+}
+button{
+  background-color: purple;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 10px 20px;
+}
+button:hover{
+  cursor: pointer;
+  background-color: rgb(147, 46, 147);
 }
